# aeolos

./: .gitignore  LICENSE  README.md  example_config.json  pyproject.toml
aeolos/: __init__.py  context.py  utils.py
aeolos/cli/: cli.py
aeolos/executor/: base.py  ec2.py  executing.py  local.py  ssh.py
aeolos/repository/: base.py  docker.py  local.py
aeolos/storage/: base.py  local.py  s3.py
aeolus/: __init__.py  context.py  task.py
aeolus/cli/: __init__.py  cli.py
aeolus/executor/: base.py  executing.py  local.py  ssh.py
aeolus/repository/: base.py  docker.py  local.py
aeolus/storage/: base.py  local.py  s3.py
tests/: conftest.py  test_cli.py  test_docker.py  test_ec2.py  test_local.py  test_s3.py  test_ssh.py
