[tool.poetry]
name = "aeolus"
version = "1.0.0"
license = "MIT"
description = "A task runner"
authors = ["Felix Peppert <felix.peppert@pm.me>"]
readme = "README.md"

scripts = { aeolus = "aeolus.cli:app" }

[tool.poetry.dependencies]
python = "^3.11"
typer = "^0.9.0"
docker = "^6.1.3"
psutil = "^5.9.6"
boto3 = "^1.28.68"
fabric = "^3.2.2"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
moto = {extras = ["ec2", "s3", "server"], version = "^4.2.6"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
